fix: rating wrap

--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,8 @@ body {
   color: #ffffff;
   background-color: #ec1f46;
   border-radius: 4px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .rating__text {
