--- a/sass/bloks/_hotel.sass
+++ b/sass/bloks/_hotel.sass
@@ -39,6 +39,7 @@
   color: $light
   background-color: $primory
   border-radius: 4px
+  flex-wrap: wrap
   &__text
     font-size: 8px
     line-height: 10px
